--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "main": "dist/termix.umd.js",
   "module": "dist/termix.es5.js",
-  "typings": "dist/types/termix.d.ts",
+  "typings": "dist/termix.d.ts",
   "files": [
     "dist"
   ],
@@ -19,7 +19,6 @@
     "node": ">=6.0.0"
   },
   "scripts": {
-    "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prebuild": "rimraf dist",
     "build": "tsc && rollup -c && rimraf compiled && typedoc --out dist/docs --target es6 --theme minimal src",
     "start": "tsc-watch --onSuccess 'rollup -c'",
@@ -28,14 +27,7 @@
     "test:prod": "npm run lint && npm run test -- --coverage --no-cache",
     "deploy-docs": "ts-node tools/gh-pages-publish",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
-    "commit": "git-cz",
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "{src,test}/**/*.ts": [
-      "prettier --write --no-semi",
-      "git add"
-    ]
+    "commit": "git-cz"
   },
   "config": {
     "commitizen": {
@@ -82,9 +74,7 @@
     "cz-conventional-changelog": "2.0.0",
     "husky": "0.13.4",
     "jest": "20.0.4",
-    "lint-staged": "4.0.0",
     "lodash": "4.17.4",
-    "prettier": "1.4.4",
     "prompt": "1.0.0",
     "replace-in-file": "2.5.0",
     "rimraf": "2.6.1",
@@ -95,7 +85,6 @@
     "ts-node": "3.0.6",
     "tsc-watch": "1.0.5",
     "tslint": "5.4.3",
-    "tslint-config-prettier": "1.1.0",
     "tslint-config-standard": "6.0.0",
     "typedoc": "0.7.1",
     "typescript": "2.3.4",
