--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,8 @@
         "allowSyntheticDefaultImports": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "declarationDir": "dist/types",
-        "outDir": "compiled",
-        "typeRoots": [
-          "node_modules/@types"
-        ]
+        "declarationDir": "dist",
+        "outDir": "compiled"
     },
     "include": [
         "src"
