--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "keywords": [],
   "main": "./dist/termix.umd.js",
   "module": "./dist/termix.es5.js",
-  "types": "./dist/termix.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "index.d.ts",
+    "index.js"
   ],
   "author": "otodockal <oto.dockal@gmail.com>",
   "repository": {
@@ -78,8 +79,8 @@
     "prompt": "1.0.0",
     "replace-in-file": "2.5.0",
     "rimraf": "2.6.1",
-    "rollup": "0.42.0",
-    "rollup-plugin-commonjs": "8.0.2",
+    "rollup": "0.50.0",
+    "rollup-plugin-commonjs": "8.2.1",
     "rollup-plugin-node-resolve": "3.0.0",
     "ts-jest": "20.0.6",
     "ts-node": "3.0.6",
@@ -88,6 +89,7 @@
     "tslint-config-standard": "6.0.0",
     "typedoc": "0.7.1",
     "typescript": "2.3.4",
-    "validate-commit-msg": "2.12.2"
+    "validate-commit-msg": "2.12.2",
+    "rxjs": "5.4.3"
   }
 }
